@@ -8,11 +8,11 @@
 # See the file "COPYING" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# @(#) $Id: configure.in,v 1.52 2000/01/13 14:44:17 strauss Exp $
+# @(#) $Id: configure.in,v 1.53 2000/01/18 11:16:44 strauss Exp $
 #
 
 AC_INIT(tools/smilint.c)
-AM_INIT_AUTOMAKE(libsmi,0.1.9-pre9)
+AM_INIT_AUTOMAKE(libsmi,0.1.9-pre10)
 LIBTOOL_VERSIONING="1:2:0"
 # NOTE: Though minor interface changes may take place between libsmi patch
 # levels (last number in AM_INIT_AUTOMAKE), we increment the libtool
@@ -40,7 +40,7 @@ AC_CHECK_FUNC(strtouq, AC_DEFINE(HAVE_STRTOUQ))
 AC_CHECK_HEADER(getopt.h, AC_DEFINE(HAVE_GETOPT_H))
 AC_CHECK_HEADER(pwd.h, AC_DEFINE(HAVE_PWD_H))
 
-AC_DEFINE(DEFAULT_GLOBALCONFIG, "/usr/local/etc/smi.conf")
+AC_DEFINE_UNQUOTED(DEFAULT_GLOBALCONFIG, "${prefix}/etc/smi.conf")
 AC_DEFINE(DEFAULT_USERCONFIG, ".smirc")
 
 AC_ARG_WITH(mibdir,
@@ -74,7 +74,7 @@ fi
 AC_PATH_PROG(BASH, "bash")
 AC_PATH_PROG(SH, "sh")
 AC_PATH_PROG(AWK, awk)
-
+AC_PATH_PROGS(DIFF, gdiff diff)
 AC_EXEEXT
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
@@ -93,9 +93,10 @@ AC_SUBST(EXEEXT)
 AC_SUBST(BASH)
 AC_SUBST(SH)
 AC_SUBST(AWK)
+AC_SUBST(DIFF)
 AC_SUBST(CC)
 AC_SUBST(CFLAGS)
 AC_SUBST(mibdir)
 AC_SUBST(smipath)
 
-AC_OUTPUT(Makefile lib/Makefile tools/Makefile mibs/Makefile mibs/iana/Makefile mibs/ietf/Makefile mibs/irtf/Makefile mibs/site/Makefile test/Makefile test/mibs/Makefile test/dumps/Makefile doc/Makefile lib/libsmi.3 lib/smi_macro.3 lib/smi_module.3 lib/smi_node.3 lib/smi_type.3 lib/smi_config.3 tools/smistrip tools/smiquery.1 tools/smilint.1 tools/smidump.1 tools/smistrip.1 test/parser.test, chmod a+x test/parser.test)
+AC_OUTPUT(Makefile lib/Makefile tools/Makefile mibs/Makefile mibs/iana/Makefile mibs/ietf/Makefile mibs/irtf/Makefile mibs/site/Makefile test/Makefile test/mibs/Makefile test/dumps/Makefile doc/Makefile lib/libsmi.3 lib/smi_macro.3 lib/smi_module.3 lib/smi_node.3 lib/smi_type.3 lib/smi_config.3 tools/smistrip tools/smiquery.1 tools/smilint.1 tools/smidump.1 tools/smistrip.1 test/parser.test test/smidump-corba-idl.test test/smidump-corba-oid.test test/smidump-imports.test test/smidump-mosy.test test/smidump-orig-smiv2.test test/smidump-sming.test test/smidump-smiv1.test test/smidump-smiv2-smiv2.test test/smidump-smiv2.test test/smidump-tree.test test/smidump-types.test test/smilint-smiv2.test, chmod a+x test/parser.test test/smidump-corba-idl.test test/smidump-corba-oid.test test/smidump-imports.test test/smidump-mosy.test test/smidump-orig-smiv2.test test/smidump-sming.test.in test/smidump-smiv1.test test/smidump-smiv2-smiv2.test test/smidump-smiv2.test test/smidump-tree.test test/smidump-types.test test/smilint-smiv2.test)
